--- a/TP_initiation_llm.ipynb
+++ b/TP_initiation_llm.ipynb
@@ -1111,15 +1111,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 48,
       "metadata": {
-        "id": "9kJ79u9sfm5U"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9kJ79u9sfm5U",
+        "outputId": "8c48c8c2-2e79-4a17-9d16-8c2b47ca4726"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "T=1, top_k=50, top_p=1, sampling=True\n",
+            "\tDrink coffee and I leave the house.\n",
+            "\n",
+            "T=1, top_k=50, top_p=1, sampling=False\n",
+            "\tgo to bed.\n",
+            "\n",
+            "T=50, top_k=50, top_p=1, sampling=True\n",
+            "\teat food with myself.\n",
+            "\n",
+            "T=1, top_k=50, top_p=0.1, sampling=True\n",
+            "\tgo to bed.\n",
+            "\n",
+            "T=200, top_k=50, top_p=0.1, sampling=True\n",
+            "\tgo to bed.\n",
+            "\n",
+            "T=50, top_k=3, top_p=0.7, sampling=True\n",
+            "\teat my breakfast.\n",
+            "\n",
+            "T=10, top_k=30, top_p=5, sampling=True\n",
+            "\tlook at what the other person ordered before starting your meal.\n",
+            "\n",
+            "T=10, top_k=30, top_p=5, sampling=False\n",
+            "\tgo to bed.\n",
+            "\n",
+            "T=200, top_k=600, top_p=1, sampling=True\n",
+            "\tfollow through with my exam after which I will go through the routine of producing notes and making notes to improve my PowerPoint Presentation and bring it for final review\n",
+            "\n",
+            "T=200, top_k=600, top_p=0.99, sampling=True\n",
+            "\twash myself.\n",
+            "\n",
+            "T=200, top_k=600, top_p=0.99, sampling=False\n",
+            "\tgo to bed.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "def generate_summary(temperature, top_k, top_p, sampling, prompt):\n",
         "    # VOTRE CODE ICI\n",
-        "    pass # à enlever"
+        "    inputs = tokenizer(prompt, return_tensors='pt')\n",
+        "    output = tokenizer.decode(\n",
+        "        model.generate(\n",
+        "            inputs[\"input_ids\"],\n",
+        "            max_new_tokens=50,\n",
+        "            top_k=top_k,\n",
+        "            top_p=top_p,\n",
+        "            do_sample=sampling,\n",
+        "\n",
+        "        )[0],\n",
+        "        skip_special_tokens=True\n",
+        "    )\n",
+        "    print(f\"T={temperature}, top_k={top_k}, top_p={top_p}, sampling={sampling}\\n\\t{output}\\n\")\n",
+        "\n",
+        "prompt = \"After taking my meal I will\"\n",
+        "generate_summary(1, 50, 1, True, prompt)\n",
+        "generate_summary(1, 50, 1, False, prompt)\n",
+        "generate_summary(50, 50, 1, True, prompt)\n",
+        "generate_summary(1, 50, 0.1, True, prompt)\n",
+        "generate_summary(200, 50, 0.1, True, prompt)\n",
+        "generate_summary(50, 3, 0.7, True, prompt)\n",
+        "generate_summary(10, 30, 5, True, prompt)\n",
+        "generate_summary(10, 30, 5, False, prompt)\n",
+        "generate_summary(200, 600, 1, True, prompt)\n",
+        "generate_summary(200, 600, 0.99, True, prompt)\n",
+        "generate_summary(200, 600, 0.99, False, prompt)"
       ]
     },
     {
@@ -1130,6 +1199,21 @@
       "source": [
         "**Exercice** : expliquer en 1 ou 2 lignes l'influence de chacun des 4 paramètres (dans une section markdown)."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Température définie la part d'aléatoire de réponse.\n",
+        "\n",
+        "top_k est la marge du poid max. Plus il est grand, plus il y a de token pouvant être utilisé.\n",
+        "\n",
+        "top_p est une probabilité max. Plus il est petit, moins les token de poids faible auront de chance d'apparaitre.\n",
+        "\n",
+        "Sampling définit si le LLM peut-être original (True) ou non (False)."
+      ],
+      "metadata": {
+        "id": "3dhjSfPg8eFX"
+      }
     },
     {
       "cell_type": "markdown",
