--- a/mini_projet_llm.ipynb
+++ b/mini_projet_llm.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ2Kp7pMkqayGf0WewckNg"
+      "authorship_tag": "ABX9TyOJ2Kp7pMkqayGf0WewckNg",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -2413,6 +2414,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/grifire/tp-initiation-llm-student-version/blob/main/mini_projet_llm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
